--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vuetify": "^1.0.0",
+    "axios": "^0.18.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-axios": "^2.1.1",
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.0.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
@@ -27,6 +30,7 @@
     "copy-webpack-plugin": "^4.1.1",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
+    "eslint-config-google": "^0.9.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.0",
