--- a/frontend/.vscode/launch.json
+++ b/frontend/.vscode/launch.json
@@ -1,24 +1,22 @@
 {
   "version": "0.2.0",
   "configurations": [
-    {
-      "type": "chrome",
-      "request": "attach",
-      "name": "Attach to Chrome",
-      "port": 9222,
-      "webRoot": "${workspaceFolder}"
-    },
-    {
-      "type": "chrome",
-      "request": "launch",
-      "name": "vuejs: chrome",
-      "url": "http://localhost:8080",
-      "webRoot": "${workspaceFolder}/src",
-      "breakOnLoad": true,
-      "sourceMapPathOverrides": {
-        "webpack:///src/*": "${webRoot}/*"
+      {
+          "type": "chrome",
+          "request": "launch",
+          "name": "Remote debugging",
+          "sourceMaps": true,
+          "url": "http://localhost:8080",
+          "webRoot": "${workspaceRoot}",
+          "runtimeExecutable": "/usr/bin/google-chrome-stable"
       },
-      "runtimeExecutable": "/usr/bin/google-chrome-stable"
-    }
+      {
+          "type": "node",
+          "request": "launch",
+          "name": "Launch Webpack",
+          "program": "${workspaceRoot}/build/dev-server.js",
+          "cwd": "${workspaceRoot}",
+          "sourceMaps": true
+      },
   ]
 }
