--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "debug": "node build/dev-server.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
