--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "debug": "node build/dev-server.js"
+    "debug": "node build/dev-server.js",
+    "db": "json-server --watch ./db/db.json"
   },
   "dependencies": {
     "axios": "^0.18.0",
