--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "debug": "node build/dev-server.js",
-    "db": "json-server --watch ./db/db.json"
+    "db": "json-server --watch db/db.json"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "date-fns": "^1.29.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.1",
     "vue-router": "^3.0.1",
