--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8088
 spring.datasource.url=jdbc:postgresql://localhost:5432/kidgarden
 spring.datasource.username=user
 spring.datasource.password=user
