--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,7 +13,7 @@
 
 	<parent>
 		<groupId>ua.net.usv</groupId>
-		<artifactId>kidgarden</artifactId>
+		<artifactId>kindergarten</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
@@ -35,6 +35,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jersey</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
