--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8088
-spring.datasource.url=jdbc:postgresql://localhost:5432/kidgarden
+spring.datasource.url=jdbc:postgresql://localhost:5432/kindergarten
 spring.datasource.username=user
 spring.datasource.password=user
 spring.datasource.driver-class-name=org.postgresql.Driver
