--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>ua.net.usv</groupId>
-        <artifactId>kidgarden</artifactId>
+        <artifactId>kindergarten</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
